--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "github-syntax-dark": "^0.5.0",
     "html-react-parser": "^3.0.9",
     "next": "13.1.6",
     "prettier": "^2.8.4",
